<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schrittzähler</string>
    <string name="desc">Tagebuch</string>
    <string name="title1">Insgesamt</string>
    <string name="unit1">Schritte</string>

    <string name="move_before">ein Tag vorher</string>
    <string name="move_next">ein Tag nachher</string>

    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>

    <string name="connect_to_shealth">Mit S Health verbinden</string>

    <string name="notice">Achtung!</string>
    <string name="msg_perm_acquired">All permissions should be acquired</string>
    <string name="msg_conn_not_available">Connection with Samsung Health is not available</string>
    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please agree with Samsung Health policy</string>
    <string name="msg_req_available">Please make Samsung Health available</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>