<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StepCounterActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/move_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/move_before"
            android:background="@drawable/ic_moveback"/>

        <TextView
            android:id="@+id/date_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/move_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/move_next"
            android:src="@drawable/ic_movenext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:background="#7F7F7F" />

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="15dp"
            android:text="@string/desc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:baselineAligned="true" >

        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/title1" />

            <TextView
                android:id="@+id/total_step_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="2"
                android:gravity="end"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="1"
                android:textColor="#C0C0C0"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/unit1" />
        </LinearLayout>

        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp" 
                android:background="#4A7EBB" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/binning_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>